Worked on contact and changed logo

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body
     max-height: 46px;
     padding: 10px;
     margin: 10px 0px 0px 0px;
-    background: url(../images/header-logo.png) 0 0 no-repeat;
+    background: url(../images/logo_school.png) 0 0 no-repeat;
     background-size: 100%;
     background-position: center;
     width: 216px;
