Worked on parents and some changes in curriculum

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body
     height: 76px;
 }
 .header-div {
-    background: #f4f3ef;
+    background: #faf9f2;
     position: fixed;
     width: 100%;
     top: 0;
