--- a/css/about-page-style.css
+++ b/css/about-page-style.css
@@ -1,13 +1,10 @@
 /*stepper*/
 .stepper-div {
     margin-top: 20px;
-}
-.stepper-item {
-    display: flex;
-    gap: 1em;
+    position: fixed;
 }
 .stepper-item:before {
-    --size: 3em;     /*variable --size*/
+    --size: 1em;     /*variable --size*/
     content: "";
     position: relative;
     z-index: 1;
@@ -22,7 +19,7 @@
     left: 0;
     top: 0;
     bottom: 0;
-    transform: translateX(1.5rem);
+    transform: translateX(0.5rem);
     width: 2px;
     background-color: #e0e0e0;
 }
@@ -30,25 +27,39 @@
     position: relative;
     display: flex;
     gap: 1em;
-    padding-bottom: 4em;
+    padding-bottom: 1em;
 } 
 .stepper-item a:visited {
     color: rgb(238, 162, 175);
     background-color: transparent;
     text-decoration: none;
 }
-.stepper-item a:hover {
+.stepper-item a:hover, .stepper-item a:active {
     color: rgb(247, 110, 110);
     background-color: transparent;
     text-decoration: none;
 }
+.stepper-title {
+    margin-top: 0;
+}
+
+/*anchors when clicking*/ 
+#introduction {
+    scroll-margin-top: 160px;
+}
+#work {
+    scroll-margin-top: 180px;
+}
+#team {
+    scroll-margin-top: 150px;
+}  
 
 /*body*/
 .data-container {
-    margin-left: 50px;
+    margin-left: 190px;
 }
 .container {
-    margin-top: 69px;
+    margin-top: 46px;
     display: flex;
 }
 
@@ -100,6 +111,9 @@
 }
 
 /*work*/
+.tables-section {
+    padding: 20px 40px;
+}
 th {
     text-align: left;
 }
@@ -108,7 +122,6 @@ table.weekly-plan, .weekly-plan th, .weekly-plan td {
     border-radius: 4px;
     border-style: ridge;
     border-color: rgb(250, 216, 175);
-    width: 90%;
     text-align: -webkit-center;
 }
 .weekly-plan th:not(:nth-child(3)), .weekly-plan td:not(:nth-child(3)) {
@@ -118,7 +131,7 @@ table.weekly-plan {
     margin: 40px;
     box-shadow: 7px 7px 2px 1px rgba(0, 0, 255, 0.103);
 }
-.weekly-plan td img {
+.weekly-plan th img {
     float: left;
 }
 .weekly-plan td span {
@@ -186,13 +199,34 @@ colgroup {
 }
 @media screen and (max-width: 860px) {
     .members-table img{
-        width: 165px;
-        height: 110px;
-    }
-}
-@media screen and (max-width: 640px) {
-    .members-table img{
         display: none;  /*change it*/
     }
 }
-
+@media screen and (max-width: 710px) {
+    .data-container{
+        margin-left: 150px;
+    }
+    .stepper-div {
+        width: 128px;
+    }
+    .tables-section {
+        padding: 10px;
+    }
+    .introduction-section {
+        padding: 40px 10px 10px 10px;
+    }
+}
+@media screen and (max-width: 600px) {
+    .data-container{
+        margin-left: 140px;
+    }
+    .stepper-div {
+        width: 116px;
+    }
+    .stepper {
+        padding-left: 10px;
+    }
+    .stepper-title {
+        font-size: 0.8em;
+    }
+}
