--- a/css/home-page-style.css
+++ b/css/home-page-style.css
@@ -111,19 +111,15 @@ section {
     width: 90%;
 }
 .goals-table .goal {
+    max-width: 375px;
     border-color: #868aca;
     color: whitesmoke;
-    box-sizing: border-box;
-    border: 0;
-    font-size: 100%;
-    margin: 0;
-    outline: 0;
     vertical-align: baseline;
     float: left;
     width: 100%;
     padding: 20px 0px 10px;
-    border-top: 5px solid;
-    border-bottom: 5px solid;
+    margin: 5px 15px;
+    border: 5px solid;
     text-align: center;
     box-sizing: border-box;
     border-collapse: collapse;
@@ -137,8 +133,13 @@ section {
 }
 .goal p {
     width: 93%;
-    height: 150px;
+    height: 85px;
     padding: 10px;
+}
+@media screen and (max-width: 564px) {
+    .goal p {
+        height: auto;
+    }
 }
 .goal:hover {
     transform: scale(1.1); 
