--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,7 @@ body
     width: 100%;
 }
 .footer-div {
+    padding: 8px;
     margin: 0px auto;
     position: relative;
     background-color: rgb(244,243,239);
