Curriculum page dev -> develop (#1)
* updates on home page and created files for other pages

* Worked on contact and changed logo

* worked on curriculum

Co-authored-by: valmirashala <valmirashalaa@gmail.com>
Co-authored-by: olsajupolli <jupolliolsa@gmail.com>

--- a/css/home-page-style.css
+++ b/css/home-page-style.css
@@ -33,7 +33,7 @@ section {
 
 /*Upcoming events section*/
 .events-section {
-    margin: 40px 20px;
+    margin: 20px;
     font-family: myriad-pro, Arial;
     color: hsl(0, 0%, 28%);
 } 
@@ -73,7 +73,7 @@ section {
 /*Academic Network section*/
 .academic-section {
     background-color: rgb(166 177 148 / 82%);
-    padding: 40px 20px;
+    padding: 20px;
     color: white;
 }
 .academic-section h1 {
