--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,12 @@ body
         display: contents;
     }
 }
+@media screen and (max-width: 500px) {
+    .footer-div {
+        width: 413px;
+    }
+}
+
 @media screen and (max-width: 600px) {
     .footer-div {
         width: 518px;
