--- a/css/achievements-page-style.css
+++ b/css/achievements-page-style.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  font-family:'myriad-pro, Arial';
+  font-family: 'Arial';
 
 }
 .result{
