--- a/css/parents-page-style.css
+++ b/css/parents-page-style.css
@@ -1,7 +1,8 @@
 .body{
     background-color:#f2f2f2;
+    background-image: url('../images/parents.jpg');
     padding: 0 10px;
-    background-size: cover;
+    background-size: contain;
    margin-top:70px;
    display: flex;
    height: 1400px;
@@ -29,7 +30,7 @@
    .box{
     height:auto;
     width: 850px;
-    background-color:rgb(177, 149, 233);
+    background-color:rgb(177 149 233 / 69%);
     font-size:18px;
     padding:3px 45px;
     text-align:center;
