--- a/css/contact-page-style.css
+++ b/css/contact-page-style.css
@@ -166,3 +166,70 @@ input[type="submit"]{
 
 
 }
+
+/* Dialog*/
+.info-dialog {
+  display: none; /* Hidden by default */
+  position: fixed; 
+  z-index: 1;
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 110px;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4); 
+}
+.dialog-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%;
+}
+.dialog-content div {
+    padding: 10px;
+}
+.dialog-content input {
+    width: auto;
+}
+.radiobtn-div, .checkbox-div {
+    padding: 10px;
+}
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+.close:hover, .close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+.buttons {
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+}
+.buttons #reset, .buttons #save {
+    padding: 10px;
+    border: none;
+    border-radius: 3px;
+    outline: none;
+    cursor: pointer;
+}
+.buttons #reset:hover {
+    background-color: #b4b3b3;
+}
+.buttons #save {
+    background-color: green;
+}
+.buttons #save:hover {
+    background-color: greenyellow;
+}
+#open-dialog {
+    background: transparent;
+    cursor: pointer;
+}
