--- a/css/curriculum-page-style.css
+++ b/css/curriculum-page-style.css
@@ -1,46 +1,30 @@
-.body{
+**.body{
     background-color:#f2f2f2;
     padding: 0 10px;
     background-size: cover;
    margin-top:70px;
    display: flex;
-   height:2000px;
-
+   height:2200px;
 }
 
 
 .wrapper{
  width: 100%; 
-height:1500px;
+height:2200px;
    display:block;
-   padding: 30px;
+   padding: 50px;
    box-shadow: 1px 1 px 2px rgba(0,0,0,0.125);
    opacity: 1.0;
    font-weight: 400;
    align-items: center;
 }
 
-
-.box1{
-float :left;
-height:530px;
-width:220px;
-background-color:#ffb3b3;
-font-size:18px;
-padding:3px 45px;
-text-align:center;
-color:white;
-font-family:Georgia;
-border-radius:10px;
-border:3px dotted white;
-margin:3% 0 0 3%;
-}
-
 .box2{
-float:right;
-height:530px;
-width:700px;
-margin:3% 5% 0 0;
+float:center;
+height:270px;
+width:1000px;
+margin:2%;
+padding: 5px;
 font-family:Georgia;
 }
 
@@ -49,26 +33,27 @@ list-style-image:url("../images/sun-icon.png");
 }
 
 .box3{
-float:left;
-height:300px;
+float:center;
+height: 800px;
 width:1000px;
-margin:4%;
+margin:2%;
 font-family:Georgia;
-align:left;
 }
 
 .box4{
 width:1000px;
 height:450px;
 display:inline-flex;
-float:left;
+float:center;
+margin:1% 2%;
+align-items: center;
 padding:10px;
 }
 
 .box41{
-width:530px;
+width:320px;
 height:350px;
-margin:6% 2% 0 2%;
+margin:6% 6px 0 6px;
 padding:3px 10px;
 text-align:center;
 border-radius:10px;
@@ -78,9 +63,9 @@ box-shadow:2px 2px #00b300;
 }
 
 .box42{
-width:530px;
+width:320px;
 height:350px;
-margin:6% 2% 0 2%;
+margin:6% 6px 0 6px;
 padding:3px 10px;
 text-align:center;
 border-radius:10px;
@@ -90,9 +75,9 @@ box-shadow:2px 2px #990000;
 }
 
 .box43{
-width:530px;
+width:320px;
 height:350px;
-margin:6% 2% 0 2%;
+margin:6% 6px 0 6px;
 padding:3px 10px;
 text-align:center;
 border-radius:10px;
@@ -103,11 +88,11 @@ box-shadow:2px 2px #8600b3;
 
 
 .box44{
-width:530px;
-height:410px;
+width:320px;
+height:420px;
 background-color:white;
 padding:3px 10px;
-margin: 0 2% 0 2%;
+margin: 0 6px;
 text-align:center;
 border-radius:10px;
 word-wrap:break-text;
@@ -117,11 +102,11 @@ box-shadow:2px 2px #2d00b3;
 
 
 .box45{
-width:530px;
-height:410px;
+width:320px;
+height:420px;
 background-color:white;
 padding:3px 10px;
-margin: 0 2% 0 2%;
+margin: 0 6px;
 text-align:center;
 border-radius:10px;
 word-wrap:break-text;
@@ -131,11 +116,11 @@ box-shadow:2px 2px #b33c00;
 
 
 .box46{
-width:530px;
-height:410px;
+width:320px;
+height:420px;
 background-color:white;
 padding:3px 10px;
-margin: 0 2% 0 2%;
+margin: 0 5px;
 text-align:center;
 border-radius:10px;
 word-wrap:break-text;
