--- a/css/about-page-style.css
+++ b/css/about-page-style.css
@@ -28,14 +28,15 @@
     display: flex;
     gap: 1em;
     padding-bottom: 1em;
+    color: rgb(254, 228, 100);
 } 
 .stepper-item a:visited {
-    color: rgb(238, 162, 175);
+    color: rgb(254, 228, 100);
     background-color: transparent;
     text-decoration: none;
 }
 .stepper-item a:hover, .stepper-item a:active {
-    color: rgb(247, 110, 110);
+    color: rgb(241, 212, 67);
     background-color: transparent;
     text-decoration: none;
 }
@@ -75,8 +76,8 @@
 }
 .quote-div {
     flex-basis: 28%;
-    background-color: #f27c7eab;
-    color: whitesmoke;
+    background-color:rgb(254, 228, 100) ;
+    color: white;
     border-radius: 4px;
 }
 .quote-div q {
@@ -104,13 +105,23 @@
     flex-basis: 70%;
     color: #3f546a;
     margin-left: 2%;
+    background-color: white;
+    padding: 10px;
+    border-radius: 5px;
 }
 #square-ul {
     list-style-type: square;
-    color: #802b2dab;
+    color: rgb(170, 189, 171);
+   
 }
 
 /*work*/
+.work-div p{
+    background-color: white;
+    padding: 10px;
+    border-radius: 5px;
+    color: rgb(252, 223, 81);
+}
 .tables-section {
     padding: 20px 40px;
 }
@@ -121,19 +132,20 @@ table.weekly-plan, .weekly-plan th, .weekly-plan td {
     border: 1px solid black;
     border-radius: 4px;
     border-style: ridge;
-    border-color: rgb(250, 216, 175);
+    border-color: rgb(254, 228, 100);
     text-align: -webkit-center;
+   background-color:rgba(206, 229, 208,0.5) ;
     padding: 2px;
 }
 .weekly-plan th:not(:nth-child(3)), .weekly-plan td:not(:nth-child(3)) {
     width: 13%;
 }
 .weekly-plan td:nth-child(4) {
-    background-color: lightgray;
+    background-color:rgb(206, 229, 208) ;
 }
 table.weekly-plan {
     margin: 40px;
-    box-shadow: 7px 7px 2px 1px rgba(0, 0, 255, 0.103);
+    box-shadow: 7px 7px 2px 1px rgb(174, 194, 176);
 }
 .weekly-plan th img {
     float: left;
@@ -151,6 +163,7 @@ colgroup {
     background: radial-gradient(100% 544.44% at 0% 7.94%,#f8e6d7 0%,#f8bf90 100%);
 }
 
+
 /*team*/
 .members-div {
     display: flex;
@@ -160,7 +173,7 @@ colgroup {
     width: 90%;
 }
 .members-table .member {
-    border-color: #868aca;
+    border-color: yellow;
     color: whitesmoke;
     box-sizing: border-box;
     border: 0;
@@ -177,8 +190,9 @@ colgroup {
     box-sizing: border-box;
     border-collapse: collapse;
     border-radius: 10px 20px 10px 20px;
-    background: radial-gradient(100% 544.44% at 0% 7.94%,#fba543 0%,#e6700f 100%);
+    background: radial-gradient(100% 544.44% at 0% 7.94%,rgb(253, 238, 160) 0%,rgb(248, 214, 46) 100%);
 }
+
 .members-table th {
     text-align: center;
     font-size: 16px;
