--- a/css/contact-page-style.css
+++ b/css/contact-page-style.css
@@ -26,13 +26,13 @@
 .contact .content h2{
     font-size: 36px;
     font-weight:500 ;
-    color:rgb(88, 59, 59);
+    color:white;
 
 }
 .contact .content p{
 
     font-weight: 300;
-    color:rgb(247, 151, 43);
+    color:white;
 }
 .container{
     width: 100%;
@@ -55,7 +55,7 @@
 .icon{
     min-width: 60px;
     height: 60px;
-    background: rgb(247, 151, 43);
+    background:rgb(254, 228, 100) ;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -66,19 +66,19 @@
     display: flex;
     margin-left:20px ;
     font-size: 16px;
-    color: rgb(19, 11, 11);
+    color: white;
     flex-direction: column;
 font-weight: 300;
 }
 .text h3{
     font-weight: 500;
-    color: rgb(192, 122, 37);
+    color: rgb(254, 228, 100);
 
 
 }
 .choose{
     padding: 2%;
-    background-color:burlywood ;
+    background-color:  rgb(254, 228, 100)  ;
     border-radius: 20px;
     text-align: center;
     margin: 5px;
@@ -89,8 +89,9 @@ font-weight: 300;
     padding: 15px;
 }
 .choose  :hover{
-   background-color: rgba(116, 59, 59, 0.582);
-   border-radius: 25px;
+ 
+   font-size: larger;
+   
    
 }
  
@@ -101,7 +102,7 @@ font-weight: 300;
 }
 h2{
     font-size: 30px;
-    color: #333;
+    color:rgb(254, 228, 100) ;
     font-weight: 500;
 }
 .inputBox{
@@ -115,9 +116,12 @@ input, textarea{
     font-size: 16px;
     margin: 10px 0;
     border: none;
-    border-bottom: 2px solid #333;
+    border-bottom: 2px solid rgb(206, 229, 208);
     outline:none ;
     resize: none;
+}
+i{
+    color: white;
 }
 .Instructions{
     position: absolute;
@@ -127,23 +131,24 @@ input, textarea{
     margin: 10px 0;
     pointer-events: none;
     transition: 0.5s;
-    color:#666;
+    color:rgb(160, 163, 161);
 }
 input:focus~span, input:valid~span, textarea:focus~span {
-    color: #e91;
+    color: rgb(254, 228, 100);
     font-size: 12px;
     transform: translateY(-20px);
 }
 input[type="submit"]{
     width: 100px;
-    background: burlywood;
+    background: rgb(254, 228, 100);
     border:none;
     cursor: pointer;
     padding: 10px;
     font-size: 18px;
+    color: white;
 }
 .map{
-    color: black;
+    color: white;
 }
 @media (max-width:991px){
     .contact{
@@ -169,67 +174,67 @@ input[type="submit"]{
 
 /* Dialog*/
 .info-dialog {
-  display: none; /* Hidden by default */
-  position: fixed; 
-  z-index: 1;
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 110px;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4); 
-}
-.dialog-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 50%;
-}
-.dialog-content div {
-    padding: 10px;
-}
-.dialog-content input {
-    width: auto;
-}
-.radiobtn-div, .checkbox-div {
-    padding: 10px;
-}
-.close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-.close:hover, .close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
-.buttons {
-    display: flex;
-    justify-content: space-between;
-    padding: 0;
-}
-.buttons #reset, .buttons #save {
-    padding: 10px;
-    border: none;
-    border-radius: 3px;
-    outline: none;
+    display: none; /* Hidden by default */
+    position: fixed; 
+    z-index: 1;
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 110px;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4); 
+  }
+  .dialog-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+  }
+  .dialog-content div {
+      padding: 10px;
+  }
+  .dialog-content input {
+      width: auto;
+  }
+  .radiobtn-div, .checkbox-div {
+      padding: 10px;
+  }
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  .close:hover, .close:focus {
+    color: #000;
+    text-decoration: none;
     cursor: pointer;
-}
-.buttons #reset:hover {
-    background-color: #b4b3b3;
-}
-.buttons #save {
-    background-color: green;
-}
-.buttons #save:hover {
-    background-color: greenyellow;
-}
-#open-dialog {
-    background: transparent;
-    cursor: pointer;
-}
+  }
+  .buttons {
+      display: flex;
+      justify-content: space-between;
+      padding: 0;
+  }
+  .buttons #reset, .buttons #save {
+      padding: 10px;
+      border: none;
+      border-radius: 3px;
+      outline: none;
+      cursor: pointer;
+  }
+  .buttons #reset:hover {
+      background-color: #b4b3b3;
+  }
+  .buttons #save {
+      background-color: green;
+  }
+  .buttons #save:hover {
+      background-color: greenyellow;
+  }
+  #open-dialog {
+      background: transparent;
+      cursor: pointer;
+  }
