--- a/css/home-page-style.css
+++ b/css/home-page-style.css
@@ -18,9 +18,9 @@
     margin: 10px 20px;
     position: absolute;
     z-index: 9;
-    background: #008000a6;
+    background-color:rgb(254, 228, 100);
     bottom: 4px;
-    color: whitesmoke;
+    color: white;
 }
 .offers-div div {
     margin: 10px;
@@ -35,7 +35,8 @@ section {
 .events-section {
     margin: 50px 20px;
     font-family: myriad-pro, Arial;
-    color: hsl(0, 0%, 28%);
+    color:rgb(254, 228, 100) ;
+    
 } 
 .events-section h2 {
     text-align: center;
@@ -46,8 +47,8 @@ section {
 }
 .event-div {
     flex: 1;
-    background-color: #f2f2f2;
-    border: 1px solid #d0d0d0;
+    background-color:white ;
+    border: 1px solid rgb(206, 229, 208);
     margin-bottom: 20px;
     margin: 10px;
     border-radius: 5px;
@@ -67,12 +68,12 @@ section {
     line-height: 1.2;
     padding: 5px;
     margin-right: 10px;
-    background: radial-gradient(100% 544.44% at 0% 7.94%,hsl(39, 96%, 62%) 0%,#d46e3e 100%);
+    background: radial-gradient(100% 544.44% at 0% 7.94%,rgb(198, 238, 202) 0%,rgb(206, 229, 208) 100%);
 }
 
 /*Academic Network section*/
 .academic-section {
-    background-image: url('../images/university.jpg');
+    background-image: url('../images/ambient.jpg');
     padding: 20px;
 }
 .academic-section h1 {
@@ -88,18 +89,23 @@ section {
     width: 100%;
 }
 .academic-section th {
-    background: #80808094;
-    color: hsl(0deg 1% 13%);
+    background: rgb(254, 228, 100);
+    color: hsl(0deg 0% 100%);
 }
 .academic-section td {
-    background-color: rgb(166 177 148 / 82%);
+    background-color:rgba(254, 228, 100,0.9) ;
+  
 }
 .academic-section td a {
-    color: hsl(0, 1%, 13%);
+    color:white ;
 }
 .academic-section td:hover {
     background-color: whitesmoke;
     cursor: pointer;
+    font-weight: bolder;
+}
+.academic-section a:hover{
+    color:rgb(254, 228, 100) ;
 }
 
 /*goals*/
@@ -115,20 +121,21 @@ section {
 }
 .goals-table .goal {
     max-width: 375px;
-    border-color: #868aca;
-    color: whitesmoke;
+    border-color: #ededf0;
+    color:white;
     vertical-align: baseline;
     float: left;
     width: 100%;
     padding: 20px 0px 10px;
     margin: 5px 15px;
-    border: 5px solid;
+    border: 2px solid;
     text-align: center;
     box-sizing: border-box;
     border-collapse: collapse;
     border-radius: 10px 10px 50px 10px;
     transition: all .2s ease-in-out; 
-    background: radial-gradient(100% 544.44% at 0% 7.94%,#fba543 0%,#e6700f 100%);
+    background: radial-gradient(100% 544.44% at 0% 7.94%,rgb(254, 228, 100) 0%,rgb(206, 229, 208) 100%);
+
 }
 .goals-table th {
     text-align: center;
@@ -146,6 +153,8 @@ section {
 }
 .goal:hover {
     transform: scale(1.1); 
+    color:rgb(156, 175, 158);
+    
 }
 .read-button {
     font-size: 18px;
@@ -164,8 +173,8 @@ section {
     margin: 10px;
 }
 .read-button:hover {
-    background-color: whitesmoke;
-    color: darkslategrey;
+    background-color:rgb(254, 228, 100) ;
+    color:white ;
     cursor: pointer;
 }
 
