--- a/css/parents-page-style.css
+++ b/css/parents-page-style.css
@@ -1,6 +1,6 @@
 .body{
     background-color:#f2f2f2;
-    background-image: url('../images/parents.jpg');
+  
     padding: 0 10px;
     background-size: contain;
    margin-top:70px;
@@ -13,7 +13,7 @@
    height: 1400px;
       display:block;
       padding: 30px;
-      box-shadow: 1px 1 px 2px rgba(0,0,0,0.125);
+      box-shadow: 1px 1 px 2px rgb(254, 228, 100);
       opacity: 1.0;
       font-weight: 400;
       align-items: center;
@@ -23,14 +23,14 @@
        text-align: center;
        font-family: Georgia, 'Times New Roman', Times, serif;
        margin-bottom: 50px;
-       color:rgb(144, 111, 209);
+       color:white;
        line-height: 3px;
    }
 
    .box{
     height:auto;
     width: 850px;
-    background-color:rgb(177 149 233 / 69%);
+    background-color:rgba(254,228,100, 69%);
     font-size:18px;
     padding:3px 45px;
     text-align:center;
