--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body
     max-height: 46px;
     padding: 10px;
     margin: 10px 0px 0px 0px;
-    background: url(../images/logo_school.png) 0 0 no-repeat;
+    background: url(../images/download.png) 0 0 no-repeat;
     background-size: 100%;
     background-position: center;
     width: 216px;
@@ -33,9 +33,10 @@ body
 }
 #header {
     height: 76px;
+   
 }
 .header-div {
-    background: #faf9f2;
+    background:whitesmoke ;
     position: fixed;
     width: 100%;
     top: 0;
@@ -51,18 +52,18 @@ body
     margin: 0px auto;
     width: 700px;
     position: relative;
-    background-color: #fff3e0;
+    background-color: rgb(206, 229, 208);
 }
 .menu a {
     font-weight: normal;
     clear: right;
     text-decoration: none;
-    color: #3f546a;
+    color:white ;
     margin: 0 10px;
     line-height: 70px;
 }
 .menu a:hover {
-    text-shadow: 0 0 20px #ff6f00;
+    text-shadow: 0 0 20px rgb(254, 228, 100);
     transition: all 0.6s ease;
 }
 .current-page {
@@ -75,7 +76,7 @@ body
     float: left;
     margin: auto;
     position: fixed;
-    background-color: #fff3e0;
+    background-color: rgb(206, 229, 208);
     z-index: 99;
 }
 
@@ -84,8 +85,8 @@ body
     font-size: 13px;
     font-weight: bold;
     text-align: center;
-    background:rgb(244,243,239);
-    color:#3f546a;
+    background:rgb(243, 240, 215);
+    color:rgb(151, 173, 153);
     font-family:'helvetica neue', sans-serif;
     letter-spacing: 1px;
     position:absolute;
@@ -97,7 +98,7 @@ body
     padding: 8px;
     margin: 0px auto;
     position: relative;
-    background-color: rgb(244,243,239);
+    background-color:whitesmoke ;
     overflow: hidden;
     display: flex;
     justify-content: space-between;
@@ -144,7 +145,7 @@ a {
     padding: 0px;
 }
 .footer-right-div ul li a{
-    color:#3f546a;
+    color:rgb(151, 173, 153);
 }
 .footer-right-div ul li img{
     width: 14px;
