--- a/css/parents-page-style.css
+++ b/css/parents-page-style.css
@@ -23,7 +23,7 @@
        text-align: center;
        font-family: Georgia, 'Times New Roman', Times, serif;
        margin-bottom: 50px;
-       color:white;
+       color:#829180;
        line-height: 3px;
    }
 
@@ -39,4 +39,17 @@
     border-radius:30px; 
     margin:auto;
     margin-bottom: 50px;
+    box-shadow: 7px 7px 2px 1px rgb(206 229 208);
+   }
+   .text{
+    font-size: 30px;
+    color: #829180;
+    margin-top: 133px;
+    margin-left: 60px;
+   }
+   .parent-pic{
+    float: right;
+    margin-right: 75px;
+    border-radius: 35px;
+    box-shadow: 7px 7px 2px 1px rgb(206 229 208);
    }
