--- a/css/curriculum-page-style.css
+++ b/css/curriculum-page-style.css
@@ -4,15 +4,15 @@
     background-size: cover;
    margin-top:70px;
    display: flex;
-   height:2200px;
+   height:fit-content;
 }
 
 
 .wrapper{
  width: 100%; 
-height:2200px;
+height:fit-content;
    display:block;
-   padding: 50px;
+   padding: 50px 0;
    box-shadow: 1px 1 px 2px rgba(0,0,0,0.125);
    opacity: 1.0;
    font-weight: 400;
@@ -22,8 +22,8 @@ height:2200px;
 
 .box2{
 float:center;
-height:270px;
-width:1000px;
+height:fit-content;
+width:95%;
 margin:2%;
 padding: 5px;
 font-family:Georgia;
@@ -41,100 +41,70 @@ border-radius: 10px;
 
 .box3{
 float:center;
-height: 800px;
-width:1000px;
-margin:2%;
+height:fit-content;
+width:95%;
+padding: 5px;
+margin:1%;
 font-family:Georgia;
 color:rgb(156, 180, 158);
 }
 
 .box4{
-width:1000px;
-height:450px;
-display:inline-flex;
-float:center;
+width:95%;
+height:fit-content;
+display:inline-block;
 margin:1% 2%;
-align-items: center;
 padding:10px;
 color:rgb(156, 180, 158);
 
 }
 
-.box41{
+.box41,.box42,.box43,.box44,.box45,.box46{
+   width:340px;
+   margin:5px 1% 0 1%;
+   padding:3px 10px;
+   text-align:center;
+   border-radius:10px;
+   word-wrap:break-text;
+   float: left;
+}
 
-width:320px;
+
+.box41{
 height:350px;
-margin:6% 6px 0 6px;
-padding:3px 10px;
-text-align:center;
-border-radius:10px;
-word-wrap:break-text;
 background-color:#ccffcc;
 box-shadow:2px 2px #00b300;
 }
 
 .box42{
-width:320px;
 height:350px;
-margin:6% 6px 0 6px;
-padding:3px 10px;
-text-align:center;
-border-radius:10px;
-word-wrap:break-text;
 background-color:#ffcccc;
 box-shadow:2px 2px #990000;
 }
 
 .box43{
-width:320px;
 height:350px;
-margin:6% 6px 0 6px;
-padding:3px 10px;
-text-align:center;
-border-radius:10px;
-word-wrap:break-text;
 background-color:#ecb3ff;
 box-shadow:2px 2px #8600b3;
 }
 
 
 .box44{
-width:320px;
 height:420px;
-background-color:white;
-padding:3px 10px;
-margin: 0 6px;
-text-align:center;
-border-radius:10px;
-word-wrap:break-text;
 background-color: #d9ccff;
 box-shadow:2px 2px #2d00b3;
 }
 
 
 .box45{
-width:320px;
 height:420px;
-background-color:white;
-padding:3px 10px;
-margin: 0 6px;
-text-align:center;
-border-radius:10px;
-word-wrap:break-text;
 background-color:#ffccb3;
 box-shadow:2px 2px #b33c00;
 }
 
 
 .box46{
-width:320px;
 height:420px;
-background-color:white;
-padding:3px 10px;
-margin: 0 5px;
-text-align:center;
-border-radius:10px;
-word-wrap:break-text;
 background-color:#ccddcc;
 box-shadow:2px 2px #476b47;
 }
