--- a/css/parents-page-style.css
+++ b/css/parents-page-style.css
@@ -1,18 +1,17 @@
 .body{
     background-color:#f2f2f2;
-  
     padding: 0 10px;
     background-size: contain;
    margin-top:70px;
    display: flex;
-   height: 1400px;
+   height:fit-content;
 }
 
 .wrapper{
     width: 100%; 
-   height: 1400px;
+   height:fit-content;
       display:block;
-      padding: 30px;
+      padding: 5px;
       box-shadow: 1px 1 px 2px rgb(254, 228, 100);
       opacity: 1.0;
       font-weight: 400;
@@ -29,7 +28,7 @@
 
    .box{
     height:auto;
-    width: 850px;
+    width: 95%;
     background-color:rgba(254,228,100, 69%);
     font-size:18px;
     padding:3px 45px;
@@ -37,7 +36,6 @@
     color:white;
     font-family:Georgia;
     border-radius:30px; 
-    margin:auto;
     margin-bottom: 50px;
     box-shadow: 7px 7px 2px 1px rgb(206 229 208);
    }
@@ -52,4 +50,5 @@
     margin-right: 75px;
     border-radius: 35px;
     box-shadow: 7px 7px 2px 1px rgb(206 229 208);
+    
    }
