--- a/css/contact-page-style.css
+++ b/css/contact-page-style.css
@@ -14,6 +14,7 @@
     flex-direction: column;
     background: url(../images/fotoaplikimi.png) no-repeat center;
     background-size: cover;
+    margin-top: 10px;
     
     
     
@@ -189,7 +190,7 @@ input[type="submit"]{
   .dialog-content {
     background-color: rgb(254, 228, 100);
     margin: auto;
-    padding: 20px;
+    padding: 10px;
     border: 1px solid #888;
     width: 50%;
     color: white;
