--- a/css/parents-page-style.css
+++ b/css/parents-page-style.css
@@ -33,7 +33,7 @@
     font-size:18px;
     padding:3px 45px;
     text-align:center;
-    color:white;
+    color:#829180;
     font-family:Georgia;
     border-radius:30px; 
     margin-bottom: 50px;
