--- a/css/style.css
+++ b/css/style.css
@@ -58,13 +58,13 @@ body
     font-weight: normal;
     clear: right;
     text-decoration: none;
-    color:white ;
+    color:rgb(156 175 158);
     margin: 0 10px;
     line-height: 70px;
 }
 .menu a:hover {
     text-shadow: 0 0 20px rgb(254, 228, 100);
-    transition: all 0.6s ease;
+    transition: all 0.3s ease;
 }
 .current-page {
     font-weight:bold;
@@ -85,7 +85,7 @@ body
     font-size: 13px;
     font-weight: bold;
     text-align: center;
-    background:rgb(243, 240, 215);
+    background:whitesmoke;
     color:rgb(151, 173, 153);
     font-family:'helvetica neue', sans-serif;
     letter-spacing: 1px;
@@ -95,7 +95,6 @@ body
     width: 100%;
 }
 .footer-div {
-    padding: 8px;
     margin: 0px auto;
     position: relative;
     background-color:whitesmoke ;
@@ -103,7 +102,7 @@ body
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 4em 1em;
+    padding: 3em 1em;
     box-sizing: border-box;
 }
 .footer-left-div {
