--- a/css/contact-page-style.css
+++ b/css/contact-page-style.css
@@ -14,7 +14,7 @@
     flex-direction: column;
     background: url(../images/fotoaplikimi.png) no-repeat center;
     background-size: cover;
-    margin-top: 15px;
+    margin-top: 25px;
     
     
     
@@ -67,13 +67,13 @@
     display: flex;
     margin-left:20px ;
     font-size: 16px;
-    color: white;
+    color: #747272;
     flex-direction: column;
-font-weight: 300;
+    font-weight: 300;
 }
 .text h3{
     font-weight: 500;
-    color: rgb(254, 228, 100);
+    color: rgb(211 176 4);
 
 
 }
@@ -188,7 +188,7 @@ input[type="submit"]{
     background-color: rgba(0,0,0,0.4); 
   }
   .dialog-content {
-    background-color: rgb(254, 228, 100);
+    background-color: rgb(183 153 9 / 97%);
     margin: auto;
     padding: 10px;
     border: 1px solid #888;
