--- a/css/curriculum-page-style.css
+++ b/css/curriculum-page-style.css
@@ -34,8 +34,9 @@ color:rgb(156, 180, 158);
 .a{
 list-style-image:url("../images/sun-icon.png");
 color: white;
-background-color: rgb(254, 228, 100);
+background-color: rgb(226 193 33 / 84%);
 padding-top: 15px;
+padding-bottom: 15px;
 border-radius: 10px;
 }
 
@@ -55,7 +56,7 @@ height:fit-content;
 display:inline-block;
 margin:1% 2%;
 padding:10px;
-color:rgb(156, 180, 158);
+color:rgb(118, 141, 119);
 
 }
 
