--- a/css/contact-page-style.css
+++ b/css/contact-page-style.css
@@ -2,7 +2,6 @@
 
 *{
     margin: 0;
-    
 }
 .contact{
     position: relative;
@@ -14,21 +13,16 @@
     flex-direction: column;
     background: url(../images/fotoaplikimi.png) no-repeat center;
     background-size: cover;
-    margin-top: 15px;
-    
-    
-    
+    margin-top: 25px;  
 }
 .contact .content{
     max-width: 800px;
     text-align: center;
-
 }
 .contact .content h2{
     font-size: 36px;
     font-weight:500 ;
     color:white;
-
 }
 .contact .content p{
 
@@ -51,7 +45,6 @@
     position: relative;
     padding: 20px 0;
     display: flex;
-
 }
 .icon{
     min-width: 60px;
@@ -67,33 +60,27 @@
     display: flex;
     margin-left:20px ;
     font-size: 16px;
-    color: white;
+    color: #747272;
     flex-direction: column;
-font-weight: 300;
+    font-weight: 300;
 }
 .text h3{
     font-weight: 500;
-    color: rgb(254, 228, 100);
-
-
+    color: rgb(211 176 4);
 }
 .choose{
     padding: 2%;
-    background-color:  rgb(254, 228, 100)  ;
+    background-color:  rgb(254, 228, 100);
     border-radius: 20px;
     text-align: center;
-    margin: 5px;
-    
+    margin: 5px;  
 }
 .choose a{
     color: white;
     padding: 15px;
 }
 .choose  :hover{
- 
-   font-size: larger;
-   
-   
+   font-size: larger; 
 }
  
 .contactForm{
@@ -169,8 +156,6 @@ input[type="submit"]{
     .body{
         margin-top: 55px;
     }
-
-
 }
 
 /* Dialog*/
@@ -186,58 +171,58 @@ input[type="submit"]{
     overflow: auto; 
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4); 
-  }
-  .dialog-content {
-    background-color: rgb(254, 228, 100);
+}
+.dialog-content {
+    background-color: rgb(183 153 9 / 97%);
     margin: auto;
     padding: 10px;
     border: 1px solid #888;
     width: 50%;
     color: white;
-  }
-  .dialog-content div {
-      padding: 10px;
-  }
-  .dialog-content input {
-      width: auto;
-  }
-  .radiobtn-div, .checkbox-div {
-      padding: 10px;
-  }
-  .close {
+}
+.dialog-content div {
+    padding: 10px;
+}
+.dialog-content input {
+    width: auto;
+}
+.radiobtn-div, .checkbox-div {
+    padding: 10px;
+}
+.close {
     color: #aaaaaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
-  }
-  .close:hover, .close:focus {
+}
+.close:hover, .close:focus {
     color: #000;
     text-decoration: none;
     cursor: pointer;
-  }
-  .buttons {
-      display: flex;
-      justify-content: space-between;
-      padding: 0;
-  }
-  .buttons #reset, .buttons #save {
-      padding: 10px;
-      border: none;
-      border-radius: 3px;
-      outline: none;
-      cursor: pointer;
-  }
-  .buttons #reset:hover {
-      background-color: #b4b3b3;
-  }
-  .buttons #save {
-      background-color:rgb(206, 229, 208) ;
-  }
-  .buttons #save:hover {
-      background-color: rgb(110, 218, 200);
-      color: rgb(254, 228, 100);
-  }
-  #open-dialog {
-      background: transparent;
-      cursor: pointer;
-  }
+}
+.buttons {
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+}
+.buttons #reset, .buttons #save {
+    padding: 10px;
+    border: none;
+    border-radius: 3px;
+    outline: none;
+    cursor: pointer;
+}
+.buttons #reset:hover {
+    background-color: #b4b3b3;
+}
+.buttons #save {
+    background-color:rgb(206, 229, 208) ;
+}
+.buttons #save:hover {
+    background-color: rgb(110, 218, 200);
+    color: rgb(254, 228, 100);
+}
+#open-dialog {
+    background: transparent;
+    cursor: pointer;
+}
