--- a/css/about-page-style.css
+++ b/css/about-page-style.css
@@ -28,15 +28,10 @@
     display: flex;
     gap: 1em;
     padding-bottom: 1em;
-    color: rgb(254, 228, 100);
+    color: rgb(248, 211, 30);
 } 
-.stepper-item a:visited {
-    color: rgb(254, 228, 100);
-    background-color: transparent;
-    text-decoration: none;
-}
-.stepper-item a:hover, .stepper-item a:active {
-    color: rgb(241, 212, 67);
+.stepper-item a:visited, .stepper-item a:hover, .stepper-item a:active, .stepper-item a:link {
+    color: rgb(248, 211, 30);
     background-color: transparent;
     text-decoration: none;
 }
@@ -54,6 +49,9 @@
 #team {
     scroll-margin-top: 150px;
 }  
+#school {
+    scroll-margin-top: 120px;
+}
 
 /*body*/
 .data-container {
@@ -77,7 +75,7 @@
 .quote-div {
     flex-basis: 28%;
     background-color:rgb(254, 228, 100) ;
-    color: white;
+    color: #649164;
     border-radius: 4px;
 }
 .quote-div q {
@@ -120,7 +118,7 @@
     background-color: white;
     padding: 10px;
     border-radius: 5px;
-    color: rgb(252, 223, 81);
+    color: rgb(248, 211, 30);
 }
 .tables-section {
     padding: 20px 40px;
@@ -131,7 +129,7 @@ th {
 table.weekly-plan, .weekly-plan th, .weekly-plan td {
     border: 1px solid black;
     border-radius: 4px;
-    border-style: ridge;
+    border-style: groove;
     border-color: rgb(254, 228, 100);
     text-align: -webkit-center;
    background-color:rgba(206, 229, 208,0.5) ;
@@ -269,4 +267,9 @@ colgroup {
     
     text-align: center;
     color: rgb(254, 228, 100);
+}
+
+.txt-format {
+    text-transform: uppercase;
+    text-decoration: underline;
 }
