--- a/css/parents-page-style.css
+++ b/css/parents-page-style.css
@@ -43,6 +43,7 @@
     font-size: 30px;
     color: #829180;
     margin-left: 60px;
+    border-bottom: 1px solid lightblue;
 }
 .parent-pic{
     float: right;
