--- a/css/achievements-page-style.css
+++ b/css/achievements-page-style.css
@@ -68,3 +68,8 @@
     border-style:ridge;
     color: rgb(156, 175, 158);   
 }
+#canvas {
+    width: 100%;
+    height: 3px;
+    background-color: rgba(9, 80, 53, 0.164);
+}
