--- a/css/achievements-page-style.css
+++ b/css/achievements-page-style.css
@@ -1,12 +1,12 @@
 .result{
-    background-color: rgb(254, 228, 100);
-    margin-top: 60px;
+    background:linear-gradient(  rgb(254, 228, 100), rgb(113, 113, 175) );
+     margin-top: 60px;
     padding-top: 40px;
     color: white;
     width: 100%;
     text-align: center;  
+  
 }
-
 .wrapper{
     padding: 25px;   
 }
@@ -46,7 +46,7 @@
     padding: 10px;
     font-style: oblique;
     font-weight: bolder;
-    color:#829180 ;
+    color:#f2f7f1 ;
 }
 .person{
     display: inline-block;
@@ -59,13 +59,16 @@
     border-style:ridge;
     color: white;
     box-shadow: 7px 7px 2px 1px rgb(206 229 208);
+    outline-style:outset ;
+    outline-color: aquamarine;
+    outline-width: 3px;
 }
 .note{
     background-color:rgb(206, 229, 208) ;
     font-style: italic;
     margin: 30px;
     border-radius: 6px;
-    border-style:ridge;
+    border-style:outset;
     color: rgb(156, 175, 158);   
 }
 #canvas {
