--- a/css/curriculum-page-style.css
+++ b/css/curriculum-page-style.css
@@ -54,6 +54,7 @@
    margin:1% 2%;
    padding:5px;
    color:rgb(118, 141, 119);
+   transform: rotateY(30deg);
 }
 
 .box41,.box42,.box43,.box44,.box45,.box46{
