--- a/css/achievements-page-style.css
+++ b/css/achievements-page-style.css
@@ -99,3 +99,7 @@
     from {transform:translateX(0)}
     to {transform: translateX(1500px)}
   }
+  .vision3{
+      column-count: 3;
+     column-gap: 50px;
+  }
