some small changes

--- a/css/parents-page-style.css
+++ b/css/parents-page-style.css
@@ -13,7 +13,7 @@
     height:fit-content;
     display:block;
     padding: 5px;
-    box-shadow: 1px 1 px 2px rgb(254, 228, 100);
+    box-shadow: 1px 1 px 2px rgb(247, 211, 36);
     opacity: 1.0;
     font-weight: 400;
     align-items: center;
@@ -30,7 +30,7 @@
 .box{
     height:auto;
     width: 92%;
-    background-color:rgba(254,228,100, 69%);
+    background-color:rgba(248, 221, 88, 0.69);
     background-origin:padding-box;
     font-size:18px;
     padding:3px 45px;
