finished web worker task and made some fixes

--- a/css/curriculum-page-style.css
+++ b/css/curriculum-page-style.css
@@ -139,3 +139,9 @@
    text-align: center;
    margin-bottom: 50px;
 }
+
+.multi-cols{
+   column-count: 2;
+   column-gap: 40px;
+   column-rule-style: solid;
+}
