--- a/css/achievements-page-style.css
+++ b/css/achievements-page-style.css
@@ -64,6 +64,7 @@
     outline-style:outset ;
     outline-color: rgb(240, 149, 232);
     outline-width: 3px;
+    outline-offset: 1px;
 }
 .note{
     background-color:rgb(229, 206, 223) ;
@@ -96,8 +97,4 @@
 @keyframes move {
     from {transform:translateX(0)}
     to {transform: translateX(1500px)}
-  }
-  .vision3{
-      column-count: 3;
-     column-gap: 50px;
-  }
+}
